Corrections for spacing, content.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -253,12 +253,8 @@ section {
         text-align: center;
         h1,p {
             display: inline-block;
-            font-size: 1.8em;
-            margin: 0 auto;
-        }
-        p {
             font-size: 1.5em;
-            margin-left: .25em;
+            margin: 0 auto;
         }
         .sub-two {
             display: block;
